--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
+* {
+  margin: 0%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
+  height: 150px;
+  background-color: rgba(26, 26, 26, 0.733);
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  position: relative;
+}
+
+.Marca {
+  position: relative;
+  margin: 0px;
+  padding: 0px;
+  color: rgba(255, 255, 255, 0.788);
+  font-size: 30px;
+  top: 15%;
+}
+
+.Items ul{ 
+  display: flex;
+  position: relative;
+  left: 30%;
+  margin: 0 15px;
+  color: rgba(255, 255, 255, 0.788);
+}
+
+
+
+li {
+  list-style-type: none;
+  margin: 0 15px;
+  font-size: 30px;
+  position: relative;
+  left: 50%;
+  top: 50px;
+}
+
+a {
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.788);
+}
+
+.Cart {
+  position: relative;
+  font-size: 60px;
+  left: 50%;
+  top: 15%;
+}
+
+.Alert {
+  display: flex;
+  background-color: aquamarine;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
