--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,11 @@ header {
   top: 15%;
 }
 
-.Items ul{ 
+.navDisplay {
+  display: flex;
+}
+
+.ulDisplay{ 
   display: flex;
   position: relative;
   left: 30%;
@@ -28,18 +32,13 @@ header {
 
 
 
-li {
+.liDisplay {
   list-style-type: none;
   margin: 0 15px;
   font-size: 30px;
   position: relative;
   left: 50%;
   top: 50px;
-}
-
-a {
-  text-decoration: none;
-  color: rgba(255, 255, 255, 0.788);
 }
 
 .Cart {
@@ -49,8 +48,11 @@ a {
   top: 15%;
 }
 
-.Alert {
+.ItemListContainerDisplay {
+  background-color: rgb(35, 36, 34);
+  color: rgba(255, 255, 255, 0.788);
+  position: relative;
   display: flex;
-  background-color: aquamarine;
   justify-content: center;
+  font-size: 50px;
 }
